--- a/.env
+++ b/.env
@@ -30,3 +30,10 @@ APP_SECRET=1d18ce387e3db1bbed95eca3bb80e33d
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=gmail://sac3g8@gmail.com:sac3g8test@localhost
+###< symfony/swiftmailer-bundle ###
